changelog.txt

This file is used to track changes to IOLabWeb and to show what is currently being worked on. 
(Questions or suggestions to mats@illinois.edu)

====================== RELEASES ====================================
v0.8.40 4/1/21
Innitial alpha release. No known bugs but I'm sure that will change as soon as someone else uses it. 

v0.8.41 4/1/21
Moved calibration button to the left. Changed "Start" "Record" and "Stop" to "Stop/Pause"  

v0.8.45 4/6/21
Some small improvements to UX (button placements etc)  


====================== WORK ========================================

Front Burner Tasks
- CSV export
- sparse plotting when Ndata >> Npixels
- compress saved files
- add sample rate to chart heading

Back Burner TAsks
- Revisit time shift
- Rationalize usage of calData vs plotData in plotting code
- display rezero icon on all zeroable plots when linked
- save/restore dataShift