@@ -322,7 +322,7 @@ var iolabConfig =
       "desc": 'RSSI',
       "shortDesc": 'RSSI',
       "label": 'Sig Str',
-      "csvLabel":["Signal"],
+      "csvLabels":["Signal (arb)"],
       "legends": ['Signal strength'],
       "pathColors": ["#0000BB"],
       "scales": [0, 100],
@@ -336,7 +336,7 @@ var iolabConfig =
       "label": "a",
       "unit": "m/s²",
       "legends": ["Ax", "Ay", "Az"],
-      "csvLabel":["Ax", "Ay", "Az"],
+      "csvLabels":["Ax (m/s/s)", "Ay (m/s/s)", "Az (m/s/s)"],
       "pathColors": ["#BB0000", "#0000BB", "#008800"],
       "scales": [-20, 20],
       "minScalingRate": 5,
@@ -350,7 +350,7 @@ var iolabConfig =
       "label": "B",
       "unit": "µT",
       "legends": ["Bx", "By", "Bz"],
-      "csvLabel":["Bx", "By", "Bz"],
+      "csvLabels":["Bx (uT)", "By (uT)", "Bz (uT)"],
       "pathColors": ["#BB0000", "#0000BB", "#008800"],
       "scales": [-150, 150],
       "minScalingRate": 5,
@@ -364,6 +364,7 @@ var iolabConfig =
       "label": "ω",
       "unit": "rad/s",
       "legends": ["ωx", "ωy", "ωz"],
+      "csvLabels":["wx (rad/s)", "wy (rad/s)", "wz (rad/s)"],
       "pathColors": ["#BB0000", "#0000BB", "#008800"],
       "scales": [-20, 20],
       "minScalingRate": 5,
@@ -377,6 +378,7 @@ var iolabConfig =
       "label": "P",
       "unit": "kPa",
       "legends": ["Pressure"],
+      "csvLabels":["Press (kPa)"],
       "pathColors": ["#0000BB"],
       "scales": [0, 120],
       "zeroable": false,
@@ -389,6 +391,7 @@ var iolabConfig =
       "label": "Intensity",
       "unit": "",
       "legends": ["Intensity"],
+      "csvLabels":["Intensity (arb)"],
       "pathColors": ["#0000BB"],
       "scales": [0, 10],
       "fftThreshold": 25,
@@ -402,6 +405,7 @@ var iolabConfig =
       "label": "Intensity",
       "unit": "",
       "legends": ["Intensity"],
+      "csvLabels":["Intensity (arb)"],
       "pathColors": ["#0000BB"],
       "scales": [0, 10],
       "zeroable": false,
@@ -414,6 +418,7 @@ var iolabConfig =
       "label": "Fᵧ",
       "unit": "N",
       "legends": ["Fᵧ"],
+      "csvLabels":["Fy (N)"],
       "pathColors": ["#0000BB"],
       "scales": [-5, 5],
       "zeroable": true,
@@ -465,6 +470,7 @@ var iolabConfig =
       "label": "A",
       "unit": "V",
       "legends": ["A1", "A2", "A3"],
+      "csvLabels": ["A1 (V)", "A2 (V)", "A3 (V)"],
       "pathColors": ["#BB0000", "#0000BB", "#008800"],
       "scales": [-0.5, 3.7],
       "zeroable": false,
@@ -477,6 +483,7 @@ var iolabConfig =
       "label": "T",
       "unit": "V",
       "legends": ["Battery"],
+      "csvLabels": ["Batt (V)"],
       "pathColors": ["#0000BB"],
       "scales": [0, 4],
       "zeroable": false,
@@ -489,6 +496,7 @@ var iolabConfig =
       "label": "A",
       "unit": "mV",
       "legends": ["Voltage"],
+      "csvLabels": ["High Gain (mV)"],
       "pathColors": ["#0000BB"],
       "scales": [-1.5, 1.5],
       "zeroable": true,
@@ -499,6 +507,7 @@ var iolabConfig =
       "desc": "Digital",
       "shortDesc": "Digi",
       "legends": ["Voltage"],
+      "csvLabels": ["Digital"],
       "pathColors": ["#0000BB"],
       "scales": [0, 5],
       "zeroable": false,
@@ -509,6 +518,7 @@ var iolabConfig =
       "desc": "Wheel Position",
       "shortDesc": "Wheel (rᵧ)",
       "legends": ["rᵧ"],
+      "csvLabels": ["Y (m)"],
       "pathColors": ["#BB0000"],
       "scales": [-2, 2],
       "zeroable": true,
@@ -519,6 +529,7 @@ var iolabConfig =
       "desc": "Wheel Velocity",
       "shortDesc": "Wheel (vᵧ)",
       "legends": ["vᵧ"],
+      "csvLabels": ["Vy (m/s)"],
       "pathColors": ["#008800"],
       "scales": [-3, 3],
       "zeroable": false,
@@ -529,6 +540,7 @@ var iolabConfig =
       "desc": "Wheel Acceleration",
       "shortDesc": "Wheel (aᵧ)",
       "legends": ["aᵧ"],
+      "csvLabels": ["Ay (m/s/s)"],
       "pathColors": ["#0000BB"],
       "scales": [-20, 20],
       "zeroable": false,
@@ -541,6 +553,7 @@ var iolabConfig =
       "label": "A",
       "unit": "V",
       "legends": ["Voltage"],
+      "csvLabels": ["A7 (V)"],
       "pathColors": ["#0000BB"],
       "scales": [-0.5, 3.7],
       "zeroable": false,
@@ -553,6 +566,7 @@ var iolabConfig =
       "label": "A",
       "unit": "V",
       "legends": ["Voltage"],
+      "csvLabels": ["A8 (V)"],
       "pathColors": ["#0000BB"],
       "scales": [-0.5, 3.7],
       "zeroable": false,
@@ -565,6 +579,7 @@ var iolabConfig =
       "label": "A",
       "unit": "V",
       "legends": ["Voltage"],
+      "csvLabels": ["A9 (V)"],
       "pathColors": ["#0000BB"],
       "scales": [-0.5, 3.7],
       "zeroable": false,
@@ -577,6 +592,7 @@ var iolabConfig =
       "label": "T",
       "unit": "°C",
       "legends": ["Temp."],
+      "csvLabels": ["Temp (C)"],
       "pathColors": ["#0000BB"],
       "scales": [0, 40],
       "zeroable": false,
@@ -588,6 +604,7 @@ var iolabConfig =
       "shortDesc": "ECG",
       "unit": "mV",
       "legends": ["I", "II", "III", "aVR", "aVL", "aVF", "V1", "V3", "V6"],
+      "csvLabels": ["I (mV)", "II (mV)", "III (mV)", "aVR (mV)", "aVL (mV)", "aVF (mV)", "V1 (mV)", "V3 (mV)", "V6 (mV)"],
       "pathColors": ["#819263","#3ca13b","#546f6f","#342fdd","#49a6ff","#515095","#c34947","#fa3430","#a73431"],
       "timeAverageIdx": 2,
       "zeroable": false,
@@ -599,6 +616,7 @@ var iolabConfig =
       "shortDesc": "I",
       "unit": "mV",
       "legends": ["I"],
+      "csvLabels": ["I (mV)"],
       "pathColors": ["#819263"],
       "zeroable": false,
       "scales": [-0.5, 0.5],
@@ -609,6 +627,7 @@ var iolabConfig =
       "shortDesc": "II",
       "unit": "mV",
       "legends": ["II"],
+      "csvLabels": ["II (mV)"],
       "pathColors": ["#3ca13b"],
       "zeroable": false,
       "scales": [-0.5, 0.5],
@@ -619,6 +638,7 @@ var iolabConfig =
       "shortDesc": "III",
       "unit": "mV",
       "legends": ["III"],
+      "csvLabels": ["III (mV)"],
       "pathColors": ["#546f6f"],
       "zeroable": false,
       "scales": [-0.5, 0.5],
@@ -629,6 +649,7 @@ var iolabConfig =
       "shortDesc": "aVR",
       "unit": "mV",
       "legends": ["aVR"],
+      "csvLabels": ["aVR (mV)"],
       "pathColors": ["#342fdd"],
       "zeroable": false,
       "scales": [-0.5, 0.5],
@@ -639,6 +660,7 @@ var iolabConfig =
       "shortDesc": "aVL",
       "unit": "mV",
       "legends": ["aVL"],
+      "csvLabels": ["aVL (mV)"],
       "pathColors": ["#49a6ff"],
       "zeroable": false,
       "scales": [-0.5, 0.5],
@@ -649,6 +671,7 @@ var iolabConfig =
       "shortDesc": "aVF",
       "unit": "mV",
       "legends": ["aVF"],
+      "csvLabels": ["aVF (mV)"],
       "pathColors": ["#515095"],
       "zeroable": false,
       "scales": [-0.5, 0.5],
@@ -659,6 +682,7 @@ var iolabConfig =
       "shortDesc": "V1",
       "unit": "mV",
       "legends": ["V1"],
+      "csvLabels": ["V1 (mV)"],
       "pathColors": ["#c34947"],
       "zeroable": false,
       "scales": [-0.5, 0.5],
@@ -669,6 +693,7 @@ var iolabConfig =
       "shortDesc": "V2",
       "unit": "mV",
       "legends": ["V2"],
+      "csvLabels": ["V2 (mV)"],
       "pathColors": ["#fa3430"],
       "zeroable": false,
       "scales": [-0.5, 0.5],
@@ -679,6 +704,7 @@ var iolabConfig =
       "shortDesc": "V3",
       "unit": "mV",
       "legends": ["V3"],
+      "csvLabels": ["V3 (mV)"],
       "pathColors": ["#a73431"],
       "zeroable": false,
       "scales": [-0.5, 0.5],
